Restore scrolling of tab groups & Fix the group label row at the top while scrolling - Collapse & expand animation speed refined (it's 0.3s now)

--- a/tabgroups.css
+++ b/tabgroups.css
@@ -58,9 +58,13 @@ tab-group:not(:has(tab:not([hidden]))) {
 
     & .tab-group-label-container {
       flex: 0 0 auto !important;
+      position: sticky !important;
+      top: 0 !important;
+      z-index: 1000 !important;
       transform: none !important;
       --tab-group-color-pale: transparent !important;
       --tab-group-color: transparent !important;
+
       margin: 0 !important;
       padding: 0 !important;
       display: flex !important;
@@ -70,7 +74,6 @@ tab-group:not(:has(tab:not([hidden]))) {
       transition: transform 0.2s ease;
       transition: background-color 0.2s ease;
       width: 100% !important;
-      transform: translateY(25px);
       @media not (-moz-bool-pref: "zen.view.sidebar-expanded") {
         width: var(--tab-min-width) !important;
       }
@@ -199,7 +202,7 @@ tab-group:not(:has(tab:not([hidden]))) {
 
     &[collapsed] {
       max-height: 36px !important;
-      transition: max-height 0.5s ease;
+      transition: max-height 0.3s ease;
 
       & .tab-group-label-container {
         &::after {
@@ -313,8 +316,10 @@ tab-group:not(:has(tab:not([hidden]))) {
 
     /* Expand when NOT collapsed */
     &:not([collapsed]) {
+      max-height: 205px;
       padding-top: 0;
-      overflow-y: hidden !important;
+      overflow-y: auto !important;
+      transition: max-height 0.3s ease;
     }
 
     tab-group:has(tab[hidden]) {
